Fix the scroll when the menu is longer then the window
Make it possible to scroll when the menu is longer then window.
I needed to use a custom "fixed" class. The foundation provide,
is not the best and I was very lucky to find this solution.
I'm super happy and this solution works really well.

Res: http://stackoverflow.com/questions/16094785/have-a-fixed-position-div-that-needs-to-scroll-if-content-overflows

Signed-of-by: Mateusz Rybinski <rybinmateusz@gmail.com>

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,6 +1,5 @@
 // ------------------------------- site-Header
 .main-header {
-	margin-bottom: 400px;
 	border-bottom: 1px solid map-get($site_static_color, border);
 
 	width: 100%;
@@ -167,5 +166,11 @@
 	}
 }
 
-
+.fixed-content {
+    top: 0;
+    bottom:0;
+    position:fixed;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
 
