--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -6152,7 +6152,6 @@ th.hide-for-touch {
   th.show-for-print {
     display: table-cell !important; } }
 .main-header {
-  margin-bottom: 400px;
   border-bottom: 1px solid #d6d6d6;
   width: 100%;
   min-height: 59px;
@@ -6269,6 +6268,13 @@ th.hide-for-touch {
   .site-search input:focus:-ms-input-placeholder {
     opacity: 0;
     transition: opacity 0.5s ease-out; }
+
+.fixed-content {
+  top: 0;
+  bottom: 0;
+  position: fixed;
+  overflow-y: scroll;
+  overflow-x: hidden; }
 
 @media only screen and (max-width: 40em) {
   .site-navigation-toggle button {
